@@ -1,3 +1,13 @@
+Sun Aug 10 14:19:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimAccountsWindow.cpp:
+	* src/QGaimAccountsWindow.h:
+	* src/QGaimBListWindow.cpp:
+	* src/QGaimBListWindow.h:
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimConvWindow.h:
+	  - QToolButton -> QAction.
+
 Sun Aug 10 13:57:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
